// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`swapEgressScheduled >v120 uses the fee from the event and creates an egress record 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "20-0",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "78187493520",
    "chain": "Ethereum",
    "scheduledAt": 2022-12-06T14:31:45.000Z,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "291",
      "asset": "Dot",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 9876545n,
  "srcAsset": "Eth",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 2022-12-06T14:31:39.000Z,
  "swapExecutedBlockIndex": "120-0",
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "10000000000",
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;

exports[`swapEgressScheduled updates an existing swap when the egress amount is higher than the swapOutputAmount 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "1000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "20-0",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "0",
    "chain": "Ethereum",
    "scheduledAt": 2022-12-06T14:31:45.000Z,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "1000",
      "asset": "Dot",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 9876545n,
  "srcAsset": "Eth",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 2022-12-06T14:31:39.000Z,
  "swapExecutedBlockIndex": "120-0",
  "swapInputAmount": "1000",
  "swapOutputAmount": "1000",
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;

exports[`swapEgressScheduled updates an existing swap when the egress asset is the native asset 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "createdAt": Any<Date>,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositReceivedAt": 2022-12-06T14:31:33.000Z,
  "depositReceivedBlockIndex": "20-0",
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "9992170633",
    "chain": "Ethereum",
    "scheduledAt": 2022-12-06T14:31:45.000Z,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "7829367",
      "asset": "Dot",
      "id": Any<BigInt>,
      "swapId": Any<BigInt>,
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "nativeId": 9876545n,
  "srcAsset": "Eth",
  "swapDepositChannelId": Any<BigInt>,
  "swapExecutedAt": 2022-12-06T14:31:39.000Z,
  "swapExecutedBlockIndex": "120-0",
  "swapInputAmount": "10000000000",
  "swapOutputAmount": "10000000000",
  "txHash": null,
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
